[package]
name = "dates_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.73"
axum = { version = "0.6.20", features = ["headers"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.3", features = ["cors"] }
chrono = { version = "0.4.22", features = ["serde"] }
jsonwebtoken = "8.1.1"
serde_json = "1.0.86"
serde_with = "2.0.1"
eyre = "0.6.8"
bcrypt = "0.15.0"

